--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Space Grotesk', sans-serif;
+  font-weight: 500;
+}
 
 :root {
-  --clr-gold: #DCC48E;
-  --clr-beige: #EAEFD3;
-  --clr-purple: #27233A;
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-light-gray: hsl(270, 3%, 87%);
+  --clr-dark-gray: hsl(279, 6%, 55%);
+  --clr-dark-violet: hsl(278, 68%, 11%)
 }
 
 body {
-  background-color: var(--clr-purple);
-  color: var(--clr-beige);
+  background-color: var(--clr-white);
 }
