--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,77 @@ body {
   background-position: top;
   background-size: 100%;
 }
+
+.card {
+  padding: 2rem 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.card img {
+  max-width: 100%;
+}
+
+.card-front {
+  align-self: start;
+  max-width: 85%;
+  order: 2;
+  margin-top: -4rem;
+  z-index: 1;
+  position: relative;
+}
+
+.card-front__data {
+  position: absolute;
+  inset: 0;
+  color: var(--clr-white);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  padding: 1rem;
+  padding-bottom: 1.5rem;
+}
+
+.card-front__data>div {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  width: 100%;
+}
+
+.card-front__data img {
+  max-width: 3.5rem;
+}
+
+.card-number {
+  letter-spacing: 2px;
+  font-size: 1.1rem;
+}
+
+.card-name-date {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  text-transform: uppercase;
+  font-size: .65rem;
+}
+
+.card-back {
+  align-self: end;
+  max-width: 85%;
+  order: 1;
+  position: relative;
+}
+
+.card-back__data {
+  position: absolute;
+  inset: 0;
+  color: var(--clr-white);
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding-right: 12%;
+  padding-bottom: .5rem;
+  font-size: .75rem;
+}
