--- a/css/styles.css
+++ b/css/styles.css
@@ -99,3 +99,67 @@ body {
   padding-bottom: .5rem;
   font-size: .75rem;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+  padding-top: 0;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group.double {
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.form-group.double>div {
+  width: 50%;
+}
+
+.columns {
+  display: flex;
+  gap: .5rem;
+}
+
+.columns input {
+  width: 100%;
+}
+
+.rows {
+  display: flex;
+  flex-direction: column;
+}
+
+.input {
+  border: 1px solid var(--clr-light-gray);
+  padding: .75rem;
+  border-radius: .5rem;
+}
+
+.input::placeholder {
+  color: var(--clr-light-gray);
+}
+
+.label {
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+  color: var(--clr-dark-violet);
+  padding-bottom: .25rem;
+}
+
+.button {
+  background-color: var(--clr-dark-violet);
+  color: var(--clr-white);
+  font-size: 1rem;
+  padding-block: .75rem;
+  border-radius: .5rem;
+  cursor: pointer;
+  border: none;
+}
