--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ body {
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100%;
+  padding-bottom: 2rem;
 }
 
 .card {
@@ -161,7 +162,32 @@ body {
   padding-block: .75rem;
   border-radius: .5rem;
   cursor: pointer;
-  border: none;
+  border: 0;
+}
+
+.thank-you {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.thank-you-title {
+  text-transform: uppercase;
+  font-size: 2rem;
+  letter-spacing: 2px;
+}
+
+.thank-you-text {
+  color: var(--clr-dark-gray)
+}
+
+.thank-you button {
+  width: 90%;
+}
+
+.disabled {
+  display: none;
 }
 
 @media screen and (min-width: 750px) {
@@ -198,9 +224,15 @@ body {
     display: flex;
     justify-content: start;
     align-items: center;
+    margin-right: auto;
   }
 
   .form {
+    width: 25rem;
+    max-width: 100%;
+  }
+
+  .thank-you {
     width: 25rem;
   }
 }
